--- a/frontend/src/styles/MeusRachas.css
+++ b/frontend/src/styles/MeusRachas.css
@@ -26,7 +26,7 @@ h1 {
 }
 
 .racha-card {
-  background-color: #899ab6;
+  background-color: #8960aa;
   border-radius: 16px;
   padding: 16px;
   position: relative;
